--- a/beckham/index.html
+++ b/beckham/index.html
@@ -148,13 +148,67 @@
           </div>
           <div class="exp-wrap py-4">
             <div class="desc">
-          <h4>Software Engineer Trainee at <span>Gove.Co</span> (<a href="https://bepoz.com.au/"></a>) </h4>
-          <p class="location">Bangalore</p>
+          <h4>Software Engineer Trainee at <span>Gove.Co</span> (<a href="http://www.gove.co">Vektorr</a>) </h4>
+          <p class="location">Tamil Nadu</p>
         </div>
         <div class="year">
-          <p>December 2020 - Present</p>
+          <p>June 2020 - Oct 2020</p>
         </div>
+        <div class="exp-wrap py-4">
+          <div class="desc">
+        <h4>Software Developer Intern at <span>iPRIMED Education Solutions Pvt. Ltd.</span> (<a href="https://www.iprimed.com/">Foodie</a>) </h4>
+        <p class="location">Bangalore</p>
       </div>
+      <div class="year">
+        <p>Aug 2018 - Oct 2018</p>
+      </div>
+      <div class="exp-wrap py-4">
+        <div class="desc">
+      <h4>Front-end Developer Intern at <span>CDD Society</span> (<a href="https://cddindia.org/">CDD Society</a>) </h4>
+      <p class="location">Bangalore</p>
+    </div>
+    <div class="year">
+      <p>March 2018 - June 2018</p>
+    </div>
+      </div>
+<!--Education-->
+        <div class="exp mt-5 ftco-animate">
+          <h2 class="mb-4">Education</h2>
+          <div class="exp-wrap py-4">
+            <div class="desc">
+              <h4>Bachelor of Technology in Information Science &amp; Engineering<span> <br/>- VTU</span> </h4>
+              <p class="location">Bangalore</p>
+            </div>
+            <div class="year">
+              <p>2015 - 2019</p>
+            </div>
+          </div>
+
+          <div class="exp-wrap py-4">
+            <div class="desc">
+              <h4> CBSE Class XI and XII<span> - Kendriya Vidyalaya ASC Centre</span> </h4>
+              <p class="location">Bangalore</p>
+            </div>
+            <div class="year">
+              <p>2013 - 2015</p>
+            </div>
+          </div>
+
+    <div class="exp-wrap py-4">
+      <div class="desc">
+        <h4>CBSE Class X<span> - Kendriya Vidyalaya ASC Centre</span> </h4>
+        <p class="location">Bangalore</p>
+      </div>
+      <div class="year">
+        <p>2012 - 2013</p>
+      </div>
+    </div>
+
+          </div>
+      </div>
+    </div>
+
+    
 
           <div class="row">
             <div class="col-md-4 d-flex align-self-stretch ftco-animate">
